--- a/app/src/main/res/layout/activity_pantalla_registro_login.xml
+++ b/app/src/main/res/layout/activity_pantalla_registro_login.xml
@@ -72,13 +72,13 @@
         app:layout_constraintVertical_bias="0.476" />
 
     <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="112dp"
-        android:layout_height="91dp"
+        android:id="@+id/btnGoogle"
+        android:layout_width="96dp"
+        android:layout_height="93dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnRegistrar"
-        app:srcCompat="@drawable/logoGoogle" />
+        app:srcCompat="@drawable/logodegoogle" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
