--- a/app/src/main/res/layout/activity_pantalla_registrarse.xml
+++ b/app/src/main/res/layout/activity_pantalla_registrarse.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/orange"
+    android:background="#FFA07A"
     tools:context=".PantallaRegistrarse">
 
     <EditText
@@ -88,5 +88,6 @@
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.648" />
+        app:layout_constraintVertical_bias="0.648"
+        tools:ignore="OnClick" />
 </androidx.constraintlayout.widget.ConstraintLayout>
